# emux

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  TODOS.md  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: auto-label.yml  auto-release.yml  ci.yml  deny.yml  pr-check.yml  release-binaries.yml
bins/emux/: Cargo.toml
bins/emux/src/: app.rs  cli.rs  command.rs  daemon.rs  error.rs  event_loop.rs  input.rs  ipc_handler.rs  keybindings.rs  main.rs  mouse.rs  operations.rs  render.rs  upgrade.rs
bins/emux/tests/: agent_ipc.rs  cli.rs  e2e.rs  integration.rs  session.rs
crates/emux-config/: Cargo.toml
crates/emux-config/src/: keys.rs  lib.rs  loader.rs  options.rs  theme.rs
crates/emux-config/tests/: config_tests.rs  keybinding_integration.rs
crates/emux-daemon/: Cargo.toml
crates/emux-daemon/src/: client.rs  lib.rs  persistence.rs  server.rs
crates/emux-daemon/tests/: agent_e2e.rs  session_lifecycle.rs
crates/emux-ipc/: Cargo.toml
crates/emux-ipc/src/: codec.rs  lib.rs  messages.rs  transport.rs
crates/emux-ipc/tests/: codec_proptest.rs  protocol.rs
crates/emux-mux/: Cargo.toml
crates/emux-mux/src/: domain.rs  layout.rs  layout_template.rs  lib.rs  pane.rs  project.rs  search.rs  session.rs  swap_config.rs  tab.rs  window.rs
crates/emux-mux/tests/: floating_panes.rs  integration.rs  mux_conformance.rs  project_detection.rs  swap_layouts.rs
crates/emux-pty/: Cargo.toml
crates/emux-pty/src/: cmdbuilder.rs  lib.rs  unix.rs  windows.rs
crates/emux-pty/tests/: spawn.rs
crates/emux-render/: Cargo.toml
crates/emux-render/src/: cursor.rs  lib.rs  statusbar.rs  text.rs
crates/emux-render/tests/: render_tests.rs
crates/emux-term/: Cargo.toml
crates/emux-term/src/: color.rs  cursor.rs  grid.rs  hints.rs  input.rs  lib.rs  modes.rs  performer.rs  screen.rs  search.rs  selection.rs
crates/emux-term/tests/: golden_tests.rs  input_conformance.rs  regressions.rs  screen_conformance.rs  screen_input_integration.rs  screen_operations.rs  smart_scrollback.rs  state_conformance.rs  terminal_conformance.rs  unicode_i18n.rs
crates/emux-term/tests/common/: mod.rs
crates/emux-vt/: Cargo.toml
crates/emux-vt/benches/: throughput.rs
crates/emux-vt/src/: charsets.rs  csi.rs  lib.rs  params.rs  parser.rs
crates/emux-vt/tests/: parser_conformance.rs  stress.rs
doc/: AI_INTEGRATION.md  CONFIGURATION.md  GETTING_STARTED.md  IPC_PROTOCOL.md  KEYBINDINGS.md  LAYOUT_TEMPLATES.md  RECORDING.md  SHELL_INTEGRATION.md  WINDOWS.md  demo.tape
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_parser.rs  fuzz_terminal.rs
