[package]
name = "emux-mux"
description = "Multiplexer engine (sessions, tabs, panes, layouts) for emux"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
emux-term.workspace = true
emux-pty.workspace = true
toml.workspace = true
serde.workspace = true
